--- a/application.css
+++ b/application.css
@@ -5,7 +5,7 @@ html{
   height: 100%;
 }
 
-.instructions{
+.instructions, .movement{
   width: 125px;
   font-family: 'Press Start 2P';
   margin-top: 15px;
@@ -13,6 +13,7 @@ html{
   font-size: 10.5px;
   margin-left: 10px;
   margin-bottom: -3px;
+  line-height: 120%;
 }
 
 .score{
